--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"build": "lerna run build --concurrency 1",
 		"publish": "lerna publish --skip-git",
 		"nuke": "npm run delete:node_modules | npm run delete:lib",
-		"delete:node_modules": "rm -rf packages/*/node_modules | rm -rf node_modules",
+		"delete:node_modules": "lerna clean",
 		"delete:lib": "rm -rf packages/*/lib/**",
 		"test:unit-test": "jest",
 		"test": "node scripts/helper.js test && lerna run test:a11y --concurrency 1"
